# gatewise

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  LICENSE  README.md  TEST-IT-YOURSELF.md  UI-OVERHAUL-PLAN.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  infra.yml  security.yml
browser-extension/: README.md  manifest.json  package.json
browser-extension/options/: options.html  options.js
browser-extension/popup/: popup.html  popup.js
browser-extension/src/: background.js  content.js  screen.js
browser-extension/test/: screen.test.js
config/checkstyle/: checkstyle.xml
config/spotbugs/: exclude.xml
console/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
console/src/: App.tsx  main.tsx
demo-capture/: DEMO.md  capture-live.mjs  capture.mjs  dark.mjs  detail.mjs  iter.mjs  landing.mjs  live3.mjs  package-lock.json  package.json  pages.mjs
demo-capture/video-v2/: auvex-ui-v2.webm  gatewise-ui-v2.webm
demo-capture/video-v3/: page@901e039a8350da428b7b182ac48d49bf.webm
deploy/: Caddyfile  docker-compose.prod.yml
deploy/k8s/: 00-namespace.yaml  10-configmap.yaml  20-secret.yaml  30-gateway.yaml  40-console.yaml  50-ingress.yaml  60-postgres.yaml  61-redis.yaml  README.md  kustomization.yaml
design/: api-keys.html  app.html  audit-log.html  dashboard.html  index.html  landing.html  login.html  models-routing.html  onboarding.html  policies-list.html  policy-editor.html  request-detail.html  settings.html  states.html  styles.css  team-roles.html  usage-cost.html  users.html
desktop/: .gitignore  README.md  package.json
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: config.rs  lib.rs  main.rs  proxy.rs
docs/: ARCHITECTURE.md  auvex.postman_collection.json  gatewise.postman_collection.json  openapi.yaml
gateway/: Dockerfile  build.gradle.kts
gateway/docs/: EGRESS.md  HA.md  LOCAL.md
infra/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  user-data.sh.tftpl  variables.tf
perf/: README.md  contract.test.mjs  load.k6.js  load.mjs  package-lock.json  package.json
sdk/go/: README.md  chat.go  client.go  client_test.go  doc.go  errors.go  go.mod  resources.go  stream.go  stream_test.go
sdk/js/: README.md  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/auvex/: __init__.py  _errors.py  client.py
sdk/python/src/gatewise/: __init__.py  _errors.py  client.py
sdk/python/tests/: conftest.py  test_client.py
(+887 files in other folders)
